[PeopleWorks] UPB4860 Gen3 MC03 V5 Rework/AXT CAMC-QI UC LAN/AXL(Library)/Visual Basic(Net)/AXD.vb


    ' 지정한 모듈에 장착된 출력 접점용 확장 기능 모듈의 Offset 위치에서 byte 단위로 데이터 출력
    '==============================================================================================='
    ' lModuleNo   : 모듈 번호
    ' lOffset     : 출력 접점에 대한 Offset 위치(0~1)
    ' uValue      : 0x00 ~ 0x0FF('1'로 읽힌 비트는 HIGH, '0'으로 읽힌 비트는 LOW)
    '==============================================================================================='
    Public Declare Function AxdWriteExtOutportByte Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lOffset As Integer, ByVal uValue As Integer) As Integer

    ' 지정한 모듈에 장착된 출력 접점용 확장 기능 모듈의 Offset 위치에서 word 단위로 데이터 출력
    '==============================================================================================='
    ' lModuleNo   : 모듈 번호
    ' lOffset     : 출력 접점에 대한 Offset 위치(0)
    ' uValue    : 0x00 ~ 0x0FFFF('1'로 읽힌 비트는 HIGH, '0'으로 읽힌 비트는 LOW)
    '==============================================================================================='
    Public Declare Function AxdWriteExtOutportWord Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lOffset As Integer, ByVal uValue As Integer) As Integer

    ' 지정한 모듈에 장착된 출력 접점용 확장 기능 모듈의 Offset 위치에서 dword 단위로 데이터 출력
    '==============================================================================================='
    ' lModuleNo   : 모듈 번호
    ' lOffset     : 출력 접점에 대한 Offset 위치(0)
    ' uValue    : 0x00 ~ 0x00000FFFF('1'로 읽힌 비트는 HIGH, '0'으로 읽힌 비트는 LOW)
    '==============================================================================================='
    Public Declare Function AxdWriteExtOutportDword Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lOffset As Integer, ByVal uValue As Integer) As Integer

    ' 지정한 모듈에 장착된 입/출력 접점용 확장 기능 모듈의 Offset 위치에서 bit 단위로 데이터 레벨을 설정
    '==============================================================================================='
    ' lModuleNo   : 모듈 번호
    ' lOffset     : 입력 접점에 대한 Offset 위치(0~15)
    ' uLevel      : LOW(0)
    '             : HIGH(1)
    '==============================================================================================='
    Public Declare Function AxdLevelSetExtportBit Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lOffset As Integer, ByVal uLevel As Integer) As Integer

    ' 지정한 모듈에 장착된 입/출력 접점용 확장 기능 모듈의 Offset 위치에서 byte 단위로 데이터 레벨을 설정
    '==============================================================================================='
    ' lModuleNo   : 모듈 번호
    ' lOffset     : 입력 접점에 대한 Offset 위치(0~1)
    ' uLevel      : 0x00 ~ 0xFF('1'로 설정 된 비트는 HIGH, '0'으로 설정 된 비트는 LOW)
    '==============================================================================================='
    Public Declare Function AxdLevelSetExtportByte Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lOffset As Integer, ByVal uLevel As Integer) As Integer

    ' 지정한 모듈에 장착된 입/출력 접점용 확장 기능 모듈의 Offset 위치에서 word 단위로 데이터 레벨을 설정
    '==============================================================================================='
    ' lModuleNo   : 모듈 번호
    ' lOffset     : 입력 접점에 대한 Offset 위치(0)
    ' uLevel      : 0x00 ~ 0xFFFF('1'로 설정 된 비트는 HIGH, '0'으로 설정 된 비트는 LOW)
    '==============================================================================================='
    Public Declare Function AxdLevelSetExtportWord Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lOffset As Integer, ByVal uLevel As Integer) As Integer

    ' 지정한 모듈에 장착된 입/출력 접점용 확장 기능 모듈의 Offset 위치에서 dword 단위로 데이터 레벨을 설정
    '==============================================================================================='
    ' lModuleNo   : 모듈 번호
    ' lOffset     : 입력 접점에 대한 Offset 위치(0)
    ' uLevel      : 0x00 ~ 0x0000FFFF('1'로 설정 된 비트는 HIGH, '0'으로 설정 된 비트는 LOW)
    '==============================================================================================='
    Public Declare Function AxdLevelSetExtportDword Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lOffset As Integer, ByVal uLevel As Integer) As Integer

    ' 지정한 모듈에 장착된 입/출력 접점용 확장 기능 모듈의 Offset 위치에서 bit 단위로 데이터 레벨 확인
    '==============================================================================================='
    ' lModuleNo   : 모듈 번호
    ' lOffset     : 입력 접점에 대한 Offset 위치(0~15)
    ' *upLevel      : LOW(0)
    '             : HIGH(1)
    '==============================================================================================='
    Public Declare Function AxdLevelGetExtportBit Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lOffset As Integer, ByVal upLevel As Integer) As Integer

    ' 지정한 모듈에 장착된 입/출력 접점용 확장 기능 모듈의 Offset 위치에서 byte 단위로 데이터 레벨 확인
    '==============================================================================================='
    ' lModuleNo   : 모듈 번호
    ' lOffset     : 입력 접점에 대한 Offset 위치(0~1)
    ' *upLevel      : 0x00 ~ 0xFF('1'로 설정 된 비트는 HIGH, '0'으로 설정 된 비트는 LOW)
    '==============================================================================================='
    Public Declare Function AxdLevelGetExtportByte Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lOffset As Integer, ByVal upLevel As Integer) As Integer

    ' 지정한 모듈에 장착된 입/출력 접점용 확장 기능 모듈의 Offset 위치에서 word 단위로 데이터 레벨 확인
    '==============================================================================================='
    ' lModuleNo   : 모듈 번호
    ' lOffset     : 입력 접점에 대한 Offset 위치(0)
    ' *upLevel      : 0x00 ~ 0xFFFF('1'로 설정 된 비트는 HIGH, '0'으로 설정 된 비트는 LOW)
    '==============================================================================================='
    Public Declare Function AxdLevelGetExtportWord Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lOffset As Integer, ByVal upLevel As Integer) As Integer

    ' 지정한 모듈에 장착된 입/출력 접점용 확장 기능 모듈의 Offset 위치에서 dword 단위로 데이터 레벨 확인
    '==============================================================================================='
    ' lModuleNo   : 모듈 번호
    ' lOffset     : 입력 접점에 대한 Offset 위치(0)
    ' *upLevel      : 0x00 ~ 0x0000FFFF('1'로 설정 된 비트는 HIGH, '0'으로 설정 된 비트는 LOW)
    '==============================================================================================='
    Public Declare Function AxdLevelGetExtportDword Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lOffset As Integer, ByVal upLevel As Integer) As Integer

    '========== 고급 함수 =================================================================================
    ' 지정한 입력 접점 모듈의 Offset 위치에서 신호가 Off에서 On으로 바뀌었는지 확인
    '==============================================================================================='
    ' lModuleNo  : 모듈 번호
    ' lOffset    : 입력 접점에 대한 Offset 위치
    ' *upValue   : FALSE(0)
    '            : TRUE(1)
    '==============================================================================================='
    Public Declare Function AxdiIsPulseOn Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lOffset As Integer, ByRef upValue As Integer) As Integer

    ' 지정한 입력 접점 모듈의 Offset 위치에서 신호가 On에서 Off으로 바뀌었는지 확인
    '==============================================================================================='
    ' lModuleNo  : 모듈 번호
    ' lOffset    : 입력 접점에 대한 Offset 위치
    ' *upValue   : FALSE(0)
    '            : TRUE(1)
    '==============================================================================================='
    Public Declare Function AxdiIsPulseOff Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lOffset As Integer, ByRef upValue As Integer) As Integer

    ' 지정한 입력 접점 모듈의 Offset 위치에서 신호가 count 만큼 호출될 동안 On 상태로 유지하는지 확인
    '==============================================================================================='
    ' lModuleNo  : 모듈 번호
    ' lOffset    : 입력 접점에 대한 Offset 위치
    ' lCount     : 0 ~ 0x7FFFFFFF(2147483647)
    ' *upValue   : FALSE(0)
    '            : TRUE(1)
    ' lStart     : 1(최초 호출)
    '            : 0(반복 호출)
    '==============================================================================================='
    Public Declare Function AxdiIsOn Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lOffset As Integer, ByVal lCount As Integer, ByRef upValue As Integer, ByVal lStart As Integer) As Integer

    ' 지정한 입력 접점 모듈의 Offset 위치에서 신호가 count 만큼 호출될 동안 Off 상태로 유지하는지 확인
    '==============================================================================================='
    ' lModuleNo  : 모듈 번호
    ' lOffset    : 출력 접점에 대한 Offset 위치
    ' lCount     : 0 ~ 0x7FFFFFFF(2147483647)
    ' *upValue   : FALSE(0)
    '            : TRUE(1)
    ' lStart     : 1(최초 호출)
    '            : 0(반복 호출)
    '==============================================================================================='
    Public Declare Function AxdiIsOff Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lOffset As Integer, ByVal lCount As Integer, ByRef upValue As Integer, ByVal lStart As Integer) As Integer

    ' 지정한 출력 접점 모듈의 Offset 위치에서 설정한 mSec동안 On을 유지하다가 Off 시킴
    '==============================================================================================='
    ' lModuleNo  : 모듈 번호
    ' lOffset    : 출력 접점에 대한 Offset 위치
    ' lCount     : 0 ~ 0x7FFFFFFF(2147483647)
    ' lmSec      : 1 ~ 30000
    '==============================================================================================='
    Public Declare Function AxdoOutPulseOn Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lOffset As Integer, ByVal lmSec As Integer) As Integer

    ' 지정한 출력 접점 모듈의 Offset 위치에서 설정한 mSec동안 Off를 유지하다가 On 시킴
    '==============================================================================================='
    ' lModuleNo  : 모듈 번호
    ' lOffset    : 출력 접점에 대한 Offset 위치
    ' lCount     : 0 ~ 0x7FFFFFFF(2147483647)
    ' lmSec      : 1 ~ 30000
    '==============================================================================================='
    Public Declare Function AxdoOutPulseOff Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lOffset As Integer, ByVal lmSec As Integer) As Integer

    ' 지정한 출력 접점 모듈의 Offset 위치에서 설정한 횟수, 설정한 간격으로 토글한 후 원래의 출력상태를 유지함
    '==============================================================================================='
    ' lModuleNo  : 모듈 번호
    ' lOffset    : 출력 접점에 대한 Offset 위치
    ' lInitState: Off(0)
    '            : On(1)
    ' lmSecOn    : 1 ~ 30000
    ' lmSecOff   : 1 ~ 30000
    ' lCount     : 1 ~ 0x7FFFFFFF(2147483647)
    '            : -1 무한 토글
    '==============================================================================================='
    Public Declare Function AxdoToggleStart Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lOffset As Integer, ByVal lInitState As Integer, ByVal lmSecOn As Integer, ByVal lmSecOff As Integer, ByVal lCount As Integer) As Integer

    ' 지정한 출력 접점 모듈의 Offset 위치에서 토글중인 출력을 설정한 신호 상태로 정지 시킴
    '==============================================================================================='
    ' lModuleNo  : 모듈 번호
    ' lOffset    : 출력 접점에 대한 Offset 위치
    ' uOnOff     : Off(0)
    '            : On(1)
    '==============================================================================================='
    Public Declare Function AxdoToggleStop Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lOffset As Integer, ByVal uOnOff As Integer) As Integer

    ' 지정한 출력 모듈의 Network이 끊어 졌을 경우 출력 상태를 출력 Byte 단위로 설정한다.
    '==============================================================================================='
    ' lModuleNo   : 모듈 번호
    ' dwSize      : 설정 할 Byte 수(ex. RTEX-DB32 : 2, RTEX-DO32 : 4)
    ' dwaSetValue : 설정 할 변수 값(Default는 Network 끊어 지기 전 상태 유지)
    '             : 0 --> Network 끊어 지기 전 상태 유지
    '             : 1 --> On
    '             : 2 --> Off
    '==============================================================================================='
    Public Declare Function AxdoSetNetworkErrorAct Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal dwSize As Integer, ByRef dwaSetValue As Integer) As Integer
